added Visual Studio settings

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -41,6 +41,12 @@ install:
   - conda list --show-channel-urls
   # Check that we have the expected version of Python
   - python --version
+  - if [[ "$APPVEYOR_BUILD_WORKER_IMAGE" == "Visual Studio 2015" ]]; then
+      call "C:\Program Files\Microsoft SDKs\Windows\v7.1\Bin\SetEnv.cmd" /x64;
+      call "C:\Program Files (x86)\Microsoft Visual Studio 14.0\VC\vcvarsall.bat" x86_amd64;
+    else
+      call "C:\Program Files (x86)\Microsoft Visual Studio\2017\Community\VC\Auxiliary\Build\vcvars64.bat";
+    fi
 
 build: off
 build_script:
